--- a/web_interface/static/css/mystyle.css
+++ b/web_interface/static/css/mystyle.css
@@ -1,7 +1,7 @@
 /* 
  * Robot Webinterface - CSS
  * Simon B., https://wired.chillibasket.com
- * V1.4, 16th February 2020
+ * V1.0, 7/6/19
  */
 
 .wrapper {
@@ -17,14 +17,12 @@
 .joystick {
 	width: 100%;
 	height: auto;
-	margin-top: -20px;
 }
 
 .joystick-text {
-	text-align: right;
+	width: 100%;
+	text-align: center;
 	color: #444;
-	margin-right: 10px;
-	height: 20px;
 }
 
 .limit {
@@ -61,6 +59,17 @@
 	}
 }
 
+@media screen and (max-width: 767px) {
+	.scroll-pane-sm {
+		max-height: 90vh;
+		padding-bottom: 0px;
+		overflow: scroll;
+		overflow-x: hidden;
+		-ms-overflow-x: hidden;
+		-webkit-overflow-scrolling: touch;
+	}
+}
+
 @media screen and (min-width: 576px) {
 	.set-text {
 		text-align: right;
@@ -68,8 +77,9 @@
 }
 
 .scroll-pane {
-	max-height: calc(100vh - 40px);
-	overflow: auto;
+	max-height: 90vh;
+	padding-bottom: 0px;
+	overflow: scroll;
 	overflow-x: hidden;
 	-ms-overflow-x: hidden;
 	-webkit-overflow-scrolling: touch;
@@ -91,32 +101,15 @@
 	font-weight: bold;
 }
 
-.list-group-item-action:hover, .list-group-item-action:focus {
-	background: #151515 !important;
-}
-
 .set-row {
 	margin-bottom: 10px;
 }
 
 .set-alert {
 	max-width: 330px;
+	margin-left: auto;
+	margin-right: auto;
 	margin-bottom: 20px;
-	width: 100%;
-	bottom: -15px;
-    position: fixed;
-}
-
-.alert-area {
-    z-index: 1500;
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 330px;
-}
-
-.alert-col {
-	z-index: 1500;
 }
 
 .set-num {
@@ -131,17 +124,25 @@
 	color: gray;
 }
 
-
-.info-elements {
-	background: #303030;
+.alert-area {
+    z-index: 1500;
 }
 
-.info-area {
-	display: inline-block;
-	padding: 5px 10px;
+.alert-fixed-row {
+	position: fixed;
+    width: 100%;
+    bottom: -15px;
 }
 
-.indicator-text {
+.battery-indicator {
+	position: absolute;
+	z-index: 1000;
+	padding: 10px;
+	top: 0px;
+    background: #375a7f;
+}
+
+.battery-level {
 	display: inline-block;
 	padding-left: 10px;
 }
@@ -150,20 +151,6 @@
 	display: inline-block;
 	padding-left: 5px;
 }
-
-.modal-image {
-	width: 100%;
-}
-
-.cursor-pointer {
-	cursor: pointer;
-}
-
-.tabpane-padding {
-	padding-top: 30px;
-	padding-bottom: 30px;
-}
-
 
 .notransition {
   -webkit-transition: none !important;
